<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sas_robot_driver_ur</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="murilo.marinho@manchester.ac.uk">Murilo Marinho</maintainer>
  <license>LGPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sas_core</depend>
  <depend>sas_common</depend>
  <depend>sas_robot_driver</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>    
